--- a/src/Components/CyberCrime/CyberCrime.css
+++ b/src/Components/CyberCrime/CyberCrime.css
@@ -1,42 +1,64 @@
+@keyframes change{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
 .CyberCrime{
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
-    background: linear-gradient(45deg, rgba(34,135,255,1) 0%, rgba(117,180,255,1) 21%, rgba(215,237,255,1) 49%, rgba(221,241,255,1) 58%, rgba(72,164,203,1) 79%, rgba(4,148,207,1) 100%);
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* background: linear-gradient(45deg, rgba(34,135,255,1) 0%, rgba(117,180,255,1) 21%, rgba(215,237,255,1) 49%, rgba(221,241,255,1) 58%, rgba(72,164,203,1) 79%, rgba(4,148,207,1) 100%);
+    background-size: cover;  */
+    /* background-repeat: no-repeat;
+    /* display:grid; */
+    position: relative;
+    /* grid-template-columns: repeat(auto-fill,minmax(30%,1fr));
+    grid-template-rows: minmax(50%,auto-fill);
+    grid-auto-flow: dense;
+    grid-gap:2px;  */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cybername{
     display:flex;
-    flex-direction: row;
-}
-.secondcat{
+    justify-content: center;
     position: absolute;
-    bottom: 2vh;
-    left: 78vw;
-
+    top: 0;
+    font-size: 40px;
+    color: white;
+    padding: 5px 20px;
+    border: 1px solid white;
+    border-radius: 50px;
+    top: 10px;
 }
-
 .secondcat img{
     width: 260px;
     position: relative;
-    bottom: 5vh;
-}
+    /* bottom: 5vh;*/
+    margin: 10px; 
+} 
 .firstvideo {
-    margin-left: 2%;
-    margin-top: 10%;
+    margin: 10px;
     
 }
 .secondvideo{
-    margin-left: 2%;
-    margin-top: 10%;
+   margin: 10px;
 }
 .firstvideo{
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; 
+    padding-bottom: 40%; 
     height: 0;
 }
 .firstvideo iframe{
     position: absolute;
-    top:0;
+    top:20%;
     left: 0;
     width: 100%;
     height: 50%;
@@ -44,14 +66,56 @@
 .secondvideo{
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; 
+    padding-bottom: 40%; 
     height: 0;
 }
 .secondvideo iframe{
     position: absolute;
-    top:0;
+    top:20%;
     left: 0;
     width: 100%;
     height: 50%;
   }
 
+
+@media all and (max-width:1200px){
+    .CyberCrime{
+        flex-direction: column;
+    }
+    .secondcat{
+        position: absolute;
+        top: 30%;
+    }
+    .secondcat img{
+        width: 150px;
+    }
+    .firstvideo{
+        margin: 0;
+        top: 5%;
+        position: absolute;
+        padding-bottom: 70%;
+    }
+    .secondvideo{
+        margin: 0;
+        top: 60%;
+        position: absolute;
+        padding-bottom: 70%;
+    }
+}
+@media all and (max-height:550px){
+    .secondcat img{
+        margin-top: 300%;
+    }
+}
+@media all and (max-width:1200px)and (min-width:1000px)and (max-height:1500px) and (min-height:1000px){
+    .secondcat img{
+        width: 300px;
+        margin-top:70%;
+    }
+}
+@media all and (max-width:1000px)and (min-width:700px)and (max-height:1500px) and (min-height:1000px){
+    .secondcat img{
+        width: 300px;
+        margin-top:40%;
+    }
+}
