--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,11 +1,30 @@
+html, body{
+    height: 100%;
+    background: linear-gradient(45deg, rgba(34,135,255,1) 0%, rgba(117,180,255,1) 21%, rgba(215,237,255,1) 49%, rgba(221,241,255,1) 58%, rgba(72,164,203,1) 79%, rgba(4,148,207,1) 100%); 
+    animation: change 7s ease-in-out infinite;
+    background-size: 400% 400%;
+}
 .Contact{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(45deg, rgba(34,135,255,1) 0%, rgba(117,180,255,1) 21%, rgba(215,237,255,1) 49%, rgba(221,241,255,1) 58%, rgba(72,164,203,1) 79%, rgba(4,148,207,1) 100%);
+    /* background: linear-gradient(45deg, rgba(34,135,255,1) 0%, rgba(117,180,255,1) 21%, rgba(215,237,255,1) 49%, rgba(221,241,255,1) 58%, rgba(72,164,203,1) 79%, rgba(4,148,207,1) 100%); 
+    animation: change 5s ease-in-out infinite;
+    background-size: 400% 400%; */
 }
 
+@keyframes change{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
 form {
-    position: absolute;;
+    position: relative;
     font-size: 20px;
     color: white;
     transform: translateY(20%);
@@ -24,13 +43,8 @@ form {
 ::-ms-input-placeholder{
     color: #c5ecfd;
 }
-/* .norkochak{
-    text-decoration: none;
-    color:white;
-    font-size: 30px;
-} */
 input{
-    width: 70%;
+    width: 80%;
     height:30px;
     margin: 10px;
     background:transparent;
@@ -65,7 +79,7 @@ input{
 } */
 .newpageik{
     width:100%;
-    color:white;
+    color:rgba(46, 43, 43, 0.836);
     font-size: 30px;
     font-size: 20px;
     display:flex;
