--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -1,20 +1,47 @@
 .Statistics{
- width:100%;
- display:flex;
- flex-direction:row;
- 
+    width:100%;
+    display:flex;
+    flex-direction:row;
 }
-
+   
 .paragraph{
-width:30%;
- font-size:18px;
- bottom:50%;
+    width:70%;
+    font-size:18px;
+    bottom:50%;
 }
 .p{
- color:white;
- }
- .histogram{
- width: 150px !important;
- height:20% !important;
- }
- 
+    color:white;
+}
+.histogram img{
+    width: 100%;
+    /* height:20% !important; */
+}
+.animatedseccat img{
+    width: 250px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 10%;
+}
+@media all and (max-width:750px){
+    .animatedseccat img{
+        width: 200px;
+    }
+} 
+@media all and (max-width:600px){
+    .animatedseccat img{
+        width: 150px;
+    }
+}
+@media all and (max-width:600px){
+    .animatedseccat img{
+        width: 100px;
+    }
+    .histogram img{
+        width: 120%;
+    }
+} 
+@media all and (max-width:370px){
+    .histogram img{
+        width: 140%;
+    }
+}     
