--- a/src/Components/CyberCrime/CyberCrime.css
+++ b/src/Components/CyberCrime/CyberCrime.css
@@ -2,6 +2,9 @@
     position:absolute;
     left:5px;
     top:5px;
+    color:white;
+    border:1px solid white;
+    border-radius:50%;
 }
 @keyframes change{
     0%{
