--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -7,12 +7,12 @@
 .anun {
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-top:20px;
 }
 .anun p{
     font-size: 40px;
     color:white;
-    line-height: 10px;
+    line-height: 20px;
 }
 /* .norkochak{
     text-decoration: none;
