--- a/src/Components/Questions/Question.css
+++ b/src/Components/Questions/Question.css
@@ -3,8 +3,13 @@
     font-size: 25px;
     font-family: Arial,sans-serif;
     font-weight: normal;
-    color: #da0f0b;
+    color: #0a202b;
     text-transform: none;
     text-shadow: none;
     text-align: left;
+}
+@media all and (max-width:780px){
+    .Content h1{
+        margin-left:15px;
+    }
 }
