--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -15,20 +15,22 @@ html, body{
     display:flex;
     flex-direction:column;
     position:absolute;
-    top:50vh;
+    top:40vh;
     left:3vw;
 }
 .insta button{
     border:none;
+    background:none;
 }
 .fb button{
     border:none;
+    background:none;
 }
 .insta img{
     width:40px;
 }
 .fb img{
-    margin-top:8px;
+    margin-top:15px;
     width:40px;
 }
 
